styles/styles.css
/* Notes: ---------------------

color palette:
	light blue: #00D2FF, rgb(0,210,255)
	dark blue: #00748D, rgb(0,116,141)
	red: #ED442F rgb(237,68,47)
	dark navy: #292F3D, rgb(41,47,61)
------------------------------*/

/* CSS Reset
------------------------------*/

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* Global Styles
------------------------------*/

html, body {
	margin: 0;
	padding: 0;
}

#img-container {
	background-image: url("../assets/Image-Board-min.png");
	background-position: top right;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
	height: auto;
	width: 100%;
	padding: 0;
	margin: 0;
	position: absolute;
}

#main {
	margin: 0 auto 0 auto;
	padding: 5em 2em 3em 2em;
	background-color: white;
}

h1 {
	font-size: 3.5rem;
	font-family: 'Dancing Script', cursive;
	font-weight: bold;
	color: rgb(0,210,255); /*light blue*/
}

h2 {
	font-size: 1.3rem;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	color: rgb(237,68,47); /*red*/
	letter-spacing: 2px;
}

h3 {
	font-size: 1.5rem;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	color: rgb(0,116,141); /*dark blue*/
	line-height: 1.5rem;
	margin: 0 0 0.5rem 0;
	letter-spacing: 1px;
}

h4 {
	font-size: 1.2em;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	color: rgb(0,116,141); /*dark blue*/
	margin: 0 0 0.2em 0;
	padding: 0.5em 0;
}

p {
	font-size: 1em;
	font-family: 'Lato', sans-serif;
	color: rgb(41,47,61); /*navy*/
}

h3 + p {
	line-height: 1.3rem;
}

a {
	font-size: 1rem;
	font-family: 'Lato', sans-serif;
	color: rgb(237,68,47); /*red*/
	text-decoration: none;
}

a:hover, a:active {
	text-decoration: underline;
}

ul {
	list-style: none;
	display: block;
}

li {
	display: inline;
}

/* Header
------------------------------*/

#header {
	margin: 0 auto 0 auto;
	padding: 1em 2em 2em 2em;
	background-color: rgba(41,47,61,0.85); /*navy*/
	position: relative;	
}

#header img {
	display: none;
}

/* Nav */

#nav-bar-left {
	display: inline-flex;
	padding: 0.5em 0 0 0;
	justify-content: flex-start;
	flex-wrap: wrap;
}

#nav-about, #nav-plans, #nav-shop {
	padding-right: 3em;
}

#nav-bar-right {
	display: inline-flex;
	float: right;
	padding: 0.5em 0 0 0;
	flex-wrap: wrap;
}

#nav-bar-right p {
	color: rgb(0,210,255); /*light blue*/
	font-weight: 300;
	padding: 0 1em;
}


/* Headings (h1 & h2 can be found in Global Styles)*/

#main-headings {
	margin-top: 20vh;
	margin-bottom: 15vh;
	text-align: center;
}

.nested-headings {
	display:inline-block;
	text-align: left;
}

.header-tagline {
	padding-left: 0.35rem;
}

#email-heading {
	color: rgb(0,210,255); /*light blue*/
	margin-bottom: 2rem;
	line-height: 1.3rem;
	text-align: center;
}


/* Email Input */

form {
	display: flex;
	align-content: space-around;
	align-items: center;
	flex-wrap: wrap;
	flex-direction: column;
	margin-bottom: 1.5rem;
}

#email {
	height: 30px;
	width: 90%;
	border-radius: 2px;
	border: none;
}

.email-text {
	padding-left: 15px;
}

#submit {
	background-color: rgba(237,68,47,0.75); /*red*/
	border-radius: 5px;
	border: none;
	margin-top: 2.5rem;
	padding: 1em;
	font-size: 14px;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	letter-spacing: 1px;
	color: #FFF;
	-webkit-appearance: none;
	-moz-appearance: none;
}

#submit:hover {
	background-color: rgba(237,68,47,1); /*red*/
}


/* Overview
------------------------------*/
#overview-container {
	margin: 1rem 0 7rem;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
}

.overview-item {
	width: 48%;
	min-width: 200px;
	display: flex;
	flex-direction: row;
}

#col-right {
	margin-top: 2rem;
}

.overview-icon {
	display: none;
	padding-right: 0.5em;
	max-width: 100px;
	min-width: 50px;
	height: auto;
}

.overview-icon img {
	width: 100%;
	align-content: top;
}

/* Shop Frames
------------------------------*/
#frames-container {
	padding: 3em 0 3em 0;
	border: solid black;
}

/*#frames-container h2 {
	text-align: center;
	padding-bottom: 1em;
}

.shop-frames {
	
}

#antique-frames {
	
}

#classic-frames {
	
}

.img-wrapper {
	position: relative;
	width: 45%;
	height: auto;
	
}

#img-wrapper-classic {
	float: right;
}

.shop-frames img {
	width: 100%;
	height: auto;
	position: absolute;
}

#classic-frames img {
	padding-top: 2em;
}

.shop-frames p {
	font-weight: 300;
	width: 50%;
}

#antique-p {
	padding: 0 0 1em 2em;
}

#classic-p-wrapper {
	border: solid black;
}

#classic-p {
	padding: 1em 1em 0 0;
}
*/


/* Pricing
------------------------------*/

#pricing-container {
	margin: 5rem -2rem;
	padding: 7rem 0;
	background-image: url("../assets/toa-heftiba-214333-unsplash-min.jpg");
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.price-box {
	margin-bottom: 0;
	padding: 2rem;
	height: auto;
	width: auto;
	justify-content: center;
	text-align: center;
	box-shadow: none;
}

#price-box1 {
	border-radius: 5px 0 0 5px;
	margin: 3.8em 0;
	background-color: rgba(255,255,255,0.85);
	box-shadow: none;
}

#price-box2 {
	border-radius: 5px;
	padding-top: 0.3rem;
	background-color: rgba(255,255,255,0.9);
	box-shadow: 0.5em 0 1.5em rgb(123,123,123,0.35), -0.5em 0 1.5em rgb(123,123,123,0.35);
	z-index: 10;
}

#price-box3 {
	border-radius: 0 5px 5px 0;
	margin: 3.8em 0;
	background-color: rgba(255,255,255,0.85);
}

button {
	background-color: rgba(195,70,59,1); /*red*/
	border-radius: 5px;
	border: none;
	margin: 1em 0 1.5em 0;
	padding: 0.8em 1em;
	font-size: 14px;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	letter-spacing: 1px;
	color: #FFF;
}

button:hover {
	background-color: rgba(237,68,47,1); /*red*/
}

.price-button {
	width: 140px;
}

.price-box h3:first-of-type {
	font-weight: 700;
}

.price-box p {
	font-size: 0.8em;
	padding: 1em 0;
}

.price-box p:first-child {
	font-family: 'Dancing Script', cursive;
	font-size: 2em;
	color: rgb(237,68,47);
	padding-bottom: 0;
	border-bottom: solid rgb(0,210,255); 
	border-width: thin;
	margin-bottom: 1.4rem; /*keeps text even across boxes*/
}


/* Video
------------------------------*/
#video-section {
	display: flex;
	flex-wrap: wrap;
}

.video-container {
	position: relative;
	width: 60%;
	padding-bottom: 32%; /* 16:9 */
	padding-top: 18px;
	height: 0;
	margin-top: 2em;
}

.video-container iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	border: none;
}

#video-desc {
	width: 33%;
	margin: 1.5em 0 0 1.5rem;
}

/* Footer
------------------------------*/

footer {
	background-color: rgb(41,47,61); /*navy*/ 
	margin: 0 auto 0 auto; 
	padding: 0 2rem 0 2rem;
	text-align: center;
}

/* Social */

#social-icon-ul {
	display: flex;
	flex-direction: row;
	justify-content: center;
	padding-top: 3em;
}

.social-link {
	padding: 0;
	margin: 1em;
	/*display: inline;*/
}


/* Copywrite */
#footer-p {
	color: rgb(237,68,47); /*red*/
	padding: 2em 0 2em 0;
	font-weight: 300;
}


/* Media Queries
------------------------------*/

@media screen and (max-width: 779px) {
	#pricing-container {
		display: block;
	}
	.price-box {
	height: auto;
	width: 40%;
	}
	#price-box1, #price-box2, #price-box3 {
		border-radius: 5px;
		margin: 2em auto 1em auto;
		background-color: rgba(255,255,255,0.85);
		box-shadow: 0.5em 0 1.5em rgb(123,123,123,0.5), -0.5em 0 1.5em rgb(123,123,123,0.5);
	}
}


@media screen and (max-width: 772px) {
	.overview-item {
		width: 100%;
	}
	#col-right {
		padding-top: 2em;
	}
}


@media screen and (min-width: 664px) {
	#nav-bar-right i{
		display: none;
		position: absolute;
	}
}


@media screen and (max-width: 663px) {
/* Removes nav links and adds menu bars */
	#nav-plans, #nav-shop, #nav-up, #nav-in, .nav-item p {
		display: none;
	}
	#nav-bar-right i {
		display: visible;
    	position: absolute;
 		margin: 1.5em 1.5em 0 0;
    	float: right;
    	right: 0;
    	top: 0;
  	}
/* Adds back links (only once menu is clicked) with new format*/
	.topnav.responsive #nav-bar-left,
	.topnav.responsive #nav-about,
	.topnav.responsive #nav-plans, 
	.topnav.responsive #nav-shop, 
	.topnav.responsive #nav-bar-right, 
	.topnav.responsive #nav-up, 
	.topnav.responsive #nav-in {
		margin: 0;
		display: block;
		float: none;
		text-align: left;
	}
	.topnav.responsive #nav-about,
	.topnav.responsive #nav-shop,
	.topnav.responsive #nav-up {
		padding-bottom: 1.5em;
	}
	.topnav.responsive #nav-plans {
		padding-bottom: 1em;
	}

  	#main-headings {
  		padding-top: 0;
	  }
	  
	.video-container {
		width: 100%;
		height: 10vh;
	}

	#video-desc {
	width: 100%;
	margin-left: 0;
	}
}


@media screen and (max-width: 520px) {
	.price-box {
		width: 80%;
	}
}

/*----------------------------------------------------------------------------
Mobile First Media Queries
----------------------------------------------------------------------------*/
@media screen and (min-width: 580px) {
	h1 {
		font-size: 5rem;
	}

	h2 {
		font-size: 2rem;
	}
	
	form {
		flex-direction: row;
		justify-content: center
	}
	
	#email {
		width: 50%;
		max-width: 450px;
		margin-right: 2rem;
	}

	#submit {
		margin-top: 0;
	}

	.overview-icon {
		display: block;
	}
}

@media screen and (min-width: 663px) {
	#header, #main, footer  {
		width: 80%;	
	}

}

@media screen and (min-width: 773px) {
	#col-right {
		margin-top: 0;
	}
}

